Yet some more cleaning
Signed-off-by: arjantijms <arjan.tijms@gmail.com>